Update api and file upload endpoint
